[package]
name = "pawn"
version = "0.9.0"
authors = ["scottmcm"]
edition = "2018"
description = "An unchecked borrow-like operation for Cells."
keywords = ["cell", "no_std", "borrow"]
categories = ["no-std", "rust-patterns"]
license = "MIT"
repository = "https://github.com/scottmcm/pawn-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
